--- a/src/views/updatePerson.ejs
+++ b/src/views/updatePerson.ejs
@@ -12,16 +12,16 @@
 
     <form action="/updatePerson" method="POST">
         <label for="nss">NSS:</label>
-        <input type="text" id="nss" name="nss" value="<%=`${myPerson.nss}` %>"><br><br>
+        <input type="text" id="nss" name="nss" value="<%= `${person.nss}` %>"><br><br>
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" value="<%=`${myPerson.nombre}`%>"><br><br>
+        <input type="text" id="nombre" name="nombre" value="<%= `${person.nombre}`%>"><br><br>
         <label for="edad">Edad:</label>
-        <input type="text" id="edad" name="edad" value="<%`${myPerson.edad}`%>"><br><br>
+        <input type="text" id="edad" name="edad" value="<%= `${person.edad}`%>"><br><br>
         <label for="tipoSangre">Tipo de Sangre:</label>
-        <input type="text" id="tipoSangre" name="tipoSangre" value="<%`${myPerson.tipoSangre}`%>"><br><br>
+        <input type="text" id="tipoSangre" name="tipoSangre" value="<%= `${person.tipoSangre}`%>"><br><br>
         <label for="objId">ID:</label>
-        <input type="text" id="objId" name="objId" value="<%`${myPerson._id}`%>"><br><br>
-        <input type="submit" value="Submit">
+        <input type="text" id="objId" name="objId" value="<%= `${person._id}`%>"><br><br>
+        <input type="submit" value="submit">
     </form>
 
 </body>
