--- a/src/views/addperson.ejs
+++ b/src/views/addperson.ejs
@@ -20,7 +20,7 @@
         <label for="tipoSangre">Tipo de Sangre:</label>
         <input type="text" name="tipoSangre" id="tipoSangre"><br><br>
 
-        <input type="submit" value="Submit">
+        <input type="submit" value="submit">
     </form>
 
 </body>
