--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,22 +20,25 @@
                 <th></th>
                 <th></th>
             </tr>
+            </thead>
+            <tbody>
             <% Object.keys(Persons).forEach(function(prop) { %>
 
                 <tr>
-                    <td><%- Persons[prop].nombre %></td>
-                    <td><%- Persons[prop].edad %></td>
-                    <td><%- Persons[prop].tipoSangre %></td>
-                    <td><%- Persons[prop].nss %></td> 
+                    <td><%= Persons[prop].nombre %></td>
+                    <td><%= Persons[prop].edad %></td>
+                    <td><%= Persons[prop].tipoSangre %></td>
+                    <td><%= Persons[prop].nss %></td> 
                     
                     <td><a href="<%= `deletePerson/${Persons[prop]._id}` %>">Eliminar</a></td>
                     <td><a href="<%= `findById/${Persons[prop]._id}` %>">Actualizar</a></td>
                 </tr>
             <% }); %>
+            </tbody>
             </table>
        
     <div style="margin-top: 10px; margin-left: 10%;">
-        <a href="./addperson" class="createPersonLink">Agregar</a>
+        <a href="./addperson" >Agregar</a>
     </div>
 
 </body>
